@@ -1,12 +1,9 @@
 package it.polimi.ingsw.gc12.Model;
 
 import com.google.gson.reflect.TypeToken;
-import it.polimi.ingsw.gc12.Model.Cards.GoldCard;
-import it.polimi.ingsw.gc12.Model.Cards.InitialCard;
-import it.polimi.ingsw.gc12.Model.Cards.ObjectiveCard;
-import it.polimi.ingsw.gc12.Model.Cards.ResourceCard;
+import it.polimi.ingsw.gc12.Model.Cards.*;
+import it.polimi.ingsw.gc12.Utilities.Exceptions.InvalidCardPositionException;
 import it.polimi.ingsw.gc12.Utilities.GenericPair;
-import it.polimi.ingsw.gc12.Utilities.JSONParser;
 import it.polimi.ingsw.gc12.Utilities.Side;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
@@ -14,59 +11,65 @@ import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
 
 class FieldTest {
     private static ArrayList<ResourceCard> resourceCards;
-    private static ArrayList<GoldCard> goldCards;
     private static ArrayList<InitialCard> initialCards;
-    private static ArrayList<ObjectiveCard> objectiveCards;
 
     Player player;
-    InGamePlayer playerGame;
+    InGamePlayer targetPlayer;
     GameLobby lobby;
     Game game;
 
     @BeforeAll
     static void setCardsLists() {
-        resourceCards = JSONParser.deckFromJSONConstructor("resource_cards.json", new TypeToken<>() {
-        });
-        goldCards = JSONParser.deckFromJSONConstructor("gold_cards.json", new TypeToken<>() {
-        });
-        initialCards = JSONParser.deckFromJSONConstructor("initial_cards.json", new TypeToken<>() {
-        });
-        objectiveCards = JSONParser.deckFromJSONConstructor("objective_cards.json", new TypeToken<>() {
-        });
+        resourceCards = CardDeckTest.loadCardDeckAsArrayList(CardDeckTest.RESOURCE_DECK_FILENAME, new TypeToken<>(){});
+        initialCards = CardDeckTest.loadCardDeckAsArrayList(CardDeckTest.INITIAL_DECK_FILENAME, new TypeToken<>(){});
     }
 
     @BeforeEach
     void setGameParameters() {
-
-        player = new Player("Sacri");
-        playerGame = new InGamePlayer(player);
-
-        lobby = new GameLobby(player, 1);
-        game = new Game(lobby);
+        player = new Player("testPlayer");
+        targetPlayer = new InGamePlayer(player);
     }
 
     @Test
-    void getCardCoordinates() throws Throwable {
+    void getCardCoordinates(){
+        //Preliminary operations to run the actual test
         Field field = new Field();
 
-        field.addCard(new GenericPair<>(0, 0), initialCards.get(0), Side.BACK);
+        assertDoesNotThrow(() -> field.addCard(new GenericPair<>(0, 0), initialCards.getFirst(), Side.BACK));
+        assertDoesNotThrow(() -> field.addCard(new GenericPair<>(1, -1), resourceCards.getFirst(), Side.FRONT));
+        assertDoesNotThrow(() -> field.addCard(new GenericPair<>(-1, 1), resourceCards.get(2), Side.FRONT));
 
-        field.addCard(new GenericPair<>(1, -1), resourceCards.get(0), Side.FRONT);
-        field.addCard(new GenericPair<>(-1, 1), resourceCards.get(2), Side.FRONT);
+        targetPlayer.addCardToHand(resourceCards.get(10));
+        targetPlayer.addCardToHand(resourceCards.get(21));
+        assertDoesNotThrow(() -> field.addCard(new GenericPair<>(2, 0), resourceCards.get(10), Side.FRONT));
+        assertDoesNotThrow(() -> field.addCard(new GenericPair<>(-2, 2), resourceCards.get(21), Side.FRONT));
 
-        playerGame.addCardToHand(resourceCards.get(10));
-        playerGame.addCardToHand(resourceCards.get(21));
-        field.addCard(new GenericPair<>(2, 0), resourceCards.get(10), Side.FRONT);
-        field.addCard(new GenericPair<>(-2, 2), resourceCards.get(21), Side.FRONT);
-
+        //Actual test
         assertEquals(new GenericPair<>(0, 0), field.getCardCoordinates(field.getPlacedCards().get(new GenericPair<>(0, 0)).getX()));
         assertEquals(new GenericPair<>(1, -1), field.getCardCoordinates(field.getPlacedCards().get(new GenericPair<>(1, -1)).getX()));
         assertEquals(new GenericPair<>(-1, 1), field.getCardCoordinates(field.getPlacedCards().get(new GenericPair<>(-1, 1)).getX()));
         assertEquals(new GenericPair<>(2, 0), field.getCardCoordinates(field.getPlacedCards().get(new GenericPair<>(2, 0)).getX()));
         assertEquals(new GenericPair<>(-2, 2), field.getCardCoordinates(field.getPlacedCards().get(new GenericPair<>(-2, 2)).getX()));
+    }
+
+    @Test
+    void addCardAtInvalidCoordinates(){
+        Field field = new Field();
+
+        assertThrows(InvalidCardPositionException.class, () -> field.addCard(new GenericPair<>(1,1), initialCards.getFirst(), Side.FRONT));
+    }
+
+    @Test
+    void addCardAtValidCoordinates(){
+        Field field = new Field();
+        PlayableCard placedCard = initialCards.getFirst();
+
+        assertDoesNotThrow(() -> field.addCard(new GenericPair<>(0,0), placedCard, Side.FRONT));
+        assertNotNull(field.getPlacedCards().get(new GenericPair<>(0,0)));
+        assertEquals(placedCard, field.getPlacedCards().get(new GenericPair<>(0,0)).getX());
     }
 }
